[package]
name = "wasm-threads"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.81"
tracing = "0.1.41"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
wasm-tracing = "2.1.0"
web-sys = { version = "0.3.81", features = ["Blob", "BlobPropertyBag", "Document", "HtmlElement", "Url", "Window", "Worker", "WorkerOptions", "WorkerType"] }
