[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.5"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
rcgen = "0.14.5"
rustls = "0.23.32"
rustls-pemfile = "2.2.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
